update layout design
match color of masguru

--- a/header.html
+++ b/header.html
@@ -36,6 +36,8 @@
     <!--canvass js-->    
     <script src="js/canvasjs.min.js"></script>
     <!--<script src="js/pace.min.js"></script>-->
+    <script src="js/sortable.min.js"></script>
+    <link rel="stylesheet" href="css/sortable-theme-bootstrap.css" />
 </head>
 
 <body id="page-top">
