--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Hong Kong Stocks Historical Chart Loookup</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="source/bootstrap/css/bootstrap.min.css" rel="stylesheet">
