--- a/header.html
+++ b/header.html
@@ -41,11 +41,11 @@
 </head>
 
 <body id="page-top">
-    <section class="bg-primary" id="about">
+    <section class="bg-primary" id="header">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Hong Kong Stocks Historical Chart Loookup</h2>
+                    <h2 class="section-heading"><a href="index.php">Hong Kong Stocks Historical Chart Loookup</a></h2>
                 </div>
             </div>
         </div>
